Fix alignment

--- a/src/Client/style.scss
+++ b/src/Client/style.scss
@@ -51,6 +51,7 @@ button {
     top: 0;
     left: 0;
     height: 100%;
+    width: 100%;
 
     display: grid;
     grid-template-columns: 1fr;
